Better error handling, full pack instantiation
